[gd_scene load_steps=5 format=2]

[ext_resource path="res://Objeto.gd" type="Script" id=1]
[ext_resource path="res://Assets/character_0008.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 7, 7.5 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 8, 9 )

[node name="Objeto" type="KinematicBody2D"]
position = Vector2( 89, 6 )
collision_layer = 8
input_pickable = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 10 )

[node name="Area2D" type="Area2D" parent="."]

[node name="objetoAtaqueColisao" type="CollisionShape2D" parent="Area2D" groups=["Objeto"]]
shape = SubResource( 11 )
disabled = true

[connection signal="mouse_entered" from="." to="." method="_on_Objeto_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Objeto_mouse_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
